@@ -1,6 +1,7 @@
 2004-02-22  Ge van Geldorp <ge@gse.nl>
 
 	* Implement keyboard navigation for menus
+	* Implement system menus
 
 2004-02-22  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
